[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
colored = "3.1.1"
env_logger = "0.11.10"
handlebars = "6.4.1"
log = "0.4.32"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
sysinfo = "0.39.3"

[dev-dependencies]
criterion = "0.8.2"

[build-dependencies]
chrono = "0.4.45"